--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <div class="col">
                     <div class="linkedInCard">
                       <div class="card" style="width: 30rem;">
-                            <img class="card-img-top" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAMAAQDGAAwAAQAAAAAAAA9LAAAAJDFjYmY4NmI5LTJkZjktNGQ3Ny05ZjRkLTc0MGQ4MzhlMTg0Zg.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="https://media.licdn.com/dms/image/C4E03AQGq6Ii-R1HwHA/profile-displayphoto-shrink_200_200/0?e=1531353600&v=beta&t=vuws2VUo-5yfmW0ORroUjWepmGoJz2Yuw7rltjDcT9A" alt="Card image cap">
                             <div class="card-body">
                               <h5 class="card-title">LinkedIn</h5>
                               <p class="card-text">Email: Binfordi14@students.ecu.edu<br>Mobile: 910-261-6271<br><br>View my personal LinkedIn profile.</p>
